# gingerino

./: .gitignore  README.md  flake.nix  pyproject.toml  renovate.json5
.github/workflows/: test.yml
gingerino/: __init__.py  main.py
tests/: test_new_stuff.py  test_none.py  test_one.py  test_parse.py  test_templates.py  test_validate.py  test_validate_types.py
