[project]
name = "gingerino"
version = "0.1.5"
description = "Parse strings using Jinja-style templates"
authors = ["Marco Burro <marcoburro98@gmail.com>"]
readme = "README.md"
repository = "https://github.com/buurro/gingerino"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]

[tool.ruff.lint]
select = [
    "I001", # isort
]
