[tool.poetry]
name = "gingerino"
version = "0.1.5"
description = "Parse strings using Jinja-style templates"
authors = ["Marco Burro <marcoburro98@gmail.com>"]

readme = "README.md"
repository = "https://github.com/buurro/gingerino"

[tool.ruff.lint]
select = [
    "I001", # isort
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
